--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <h1>Hi, My name is Hasan. I am a student.</h1>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim aliquam
+      excepturi velit dolorum nostrum dolor illo assumenda quis natus cumque.
+    </p>
+  </body>
 </html>
