--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim aliquam
       excepturi velit dolorum nostrum dolor illo assumenda quis natus cumque.
     </p>
-    <h2>Ok I know about you.But I want a big projcet with you.Which project would be a figma.So are you arrge to do collabrato with me></h2>
+    <h2>
+      Ok I know about you.But I want a big projcet with you.Which project would
+      be a figma.So are you arrge to do collabrato with me>
+    </h2>
+    <h1>ok</h1>
   </body>
 </html>
